yaml/server-timing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-timing-deployment
  labels:
    app: server-timing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-timing
  template:
    metadata:
      labels:
        app: server-timing
    spec:
      containers:
      - name: server-timing
        image: server-timing:0.0.1
        ports:
        - containerPort: 80
