yaml/hworld-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hworld-client-service
spec:
  selector:
    app: hworld-client
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
