yaml/hworld-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hworld-server-service
spec:
  selector:
    app: hworld-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
