yaml/server-eta-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-eta-service
spec:
  selector:
    app: server-eta
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
