yaml/server-route-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-route-service
spec:
  selector:
    app: server-route
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
