yaml/server-timing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-timing-service
spec:
  selector:
    app: server-timing
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
