yaml/ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - host: helloworld.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server-timing-service
                port:
                  number: 8080
